14506
trunk, r18709, this works:
{code}
scala> "foo".map(x => '3')
res5: String = 333
{code}

but this doesn't:
{code}
scala> "foo".map(x => 3)  
<console>:5: error: could not find implicit value for parameter bf: scala.collection.generic.BuilderFactory[Int,That,String]
       "foo".map(x => 3)
                ^
{code}
